[package]
name = "wutil"
version = "0.0.4"
edition = "2021"
license = "MIT"
description = "A lightweight library that contains potentially useful functions, wrappers, and macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = []

[dependencies]
