[package]
name = "wutil"
version = "0.0.6"
edition = "2021"
license = "MIT"
description = "A lightweight library that contains useful functions, wrappers, and macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = []

[dependencies]
