[package]
name = "wutil"
version = "0.0.7"
edition = "2024"
license = "MIT"
description = "A lightweight library that contains useful functions, wrappers, and macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = []

[dependencies]
